<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextUserId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="User ID"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextReadingDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintReadingDate"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextReadingTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintReadingTime"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextSystolicReading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintSystolicReading"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextDiastolicReading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintDiastolicReading"
        android:inputType="textPersonName" />

   <!-- <EditText
        android:id="@+id/editTextCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Condition: "
        android:inputType="textPersonName" /> -->

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnUpdate" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDelete" />


</LinearLayout>